[gd_scene load_steps=9 format=3 uid="uid://bh6gdjokljh6y"]

[ext_resource type="Script" path="res://scenes/menu/levels.gd" id="1_0oq2t"]
[ext_resource type="Shader" path="res://scenes/menu/lvlselectbg.gdshader" id="2_dicg4"]
[ext_resource type="Texture2D" uid="uid://dwkjubefyqcqi" path="res://assets/gui_pack_White/white_home.png" id="2_t0i1p"]
[ext_resource type="Texture2D" uid="uid://b5hyaxg10vuk7" path="res://assets/images/LevelSelectionBackground.png" id="3_3cean"]
[ext_resource type="Shader" path="res://scenes/menu/lvlselectorplanets.gdshader" id="4_1xwhw"]
[ext_resource type="Texture2D" uid="uid://jioig6to1ji" path="res://assets/images/Planets1.png" id="5_dtx0p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_if1u1"]
shader = ExtResource("2_dicg4")
shader_parameter/speed = 0.03

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k3cg3"]
shader = ExtResource("4_1xwhw")
shader_parameter/speed = 0.07

[node name="levels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0oq2t")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_if1u1")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_3cean")
stretch_mode = 6

[node name="Planets" type="TextureRect" parent="ColorRect/TextureRect"]
texture_filter = 2
texture_repeat = 2
material = SubResource("ShaderMaterial_k3cg3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_dtx0p")
stretch_mode = 6

[node name="MainContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MainContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TopBar" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="BackButton" type="TextureButton" parent="MainContainer/MarginContainer/VBoxContainer/TopBar"]
texture_filter = 1
texture_repeat = 1
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("2_t0i1p")
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="MainContainer/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
text = "Select Level"

[node name="LevelGrid" type="GridContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 3

[node name="Level1Button" type="Button" parent="MainContainer/MarginContainer/VBoxContainer/LevelGrid"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
text = "Level 1"

[node name="Level2Button" type="Button" parent="MainContainer/MarginContainer/VBoxContainer/LevelGrid"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
text = "Level 2"

[node name="Level3Button" type="Button" parent="MainContainer/MarginContainer/VBoxContainer/LevelGrid"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
text = "Level 3"

[connection signal="pressed" from="MainContainer/MarginContainer/VBoxContainer/TopBar/BackButton" to="." method="_on_back_button_pressed"]
